--- a/style.css
+++ b/style.css
@@ -35,12 +35,20 @@ body {
 
 .hint {
   height: 100%;
+  width: auto;
   margin: 0 auto;
   padding: 2rem;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (orientation: landscape) {
+  .hint {
+    flex-direction: row;
+  }
 }
 
 .hint-image-wrapper {
@@ -50,20 +58,15 @@ body {
   justify-content: center;
 }
 
-.opacity-transition {
-  transition: opacity 0.3s ease-in-out;
-}
-
 .hint-image {
   max-width: 60%;
   display: block;
-  margin: 0 auto;
 }
 
 .hint-text {
   text-align: center;
   margin-top: 1rem;
-  font-size: 4rem;
+  font-size: 3rem;
   padding: 1rem;
 }
 
@@ -74,31 +77,35 @@ body {
   font-size: 2rem;
 }
 
+.opacity-transition {
+  transition: opacity 0.3s ease-in-out;
+}
+
 .hide {
   opacity: 0;
 }
 
 @keyframes leftRight {
   0% {
-    transform: translateX(-10vw);
+    transform: translateX(-20%);
   }
   50% {
-    transform: translateX(10vw);
+    transform: translateX(20%);
   }
   100% {
-    transform: translateX(-10vw);
+    transform: translateX(-20%);
   }
 }
 
 @keyframes upDown {
   0% {
-    transform: translateY(-10vw);
+    transform: translateY(-20%);
   }
   50% {
-    transform: translateY(10vw);
+    transform: translateY(20%);
   }
   100% {
-    transform: translateY(-10vw);
+    transform: translateY(-20%);
   }
 }
 
@@ -107,7 +114,7 @@ body {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10vw);
+    transform: translateY(20%);
   }
   100% {
     transform: translateY(0);
@@ -137,62 +144,64 @@ body {
   width: 100vw;
   height: 100vh;
 
-  display: flex;
-  justify-content: end;
   overflow: hidden;
-}
-
-.control {
-  z-index: 100;
-
-  max-width: 960px;
-  margin: auto auto;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: end;
-  padding: 1rem;
-  transition: transform 0.3s ease-in-out;
-}
-
-.control-row {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 0 1rem;
-  gap: 2rem;
-}
-
-.control-text {
-  font-size: 3rem;
-  text-align: center;
-  flex: 0 0 100%;
-  padding: 1rem;
-}
-
-.control-item {
-  border: 0.5rem solid #000;
-  background-color: #fff;
-  border-radius: 50%;
-
-  padding: 30px;
-  aspect-ratio: 1 / 1;
-  flex: 1 1 33%;
 
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.control-icon {
+.control {
+  flex: 1 1 0;
+  z-index: 100;
+
+  display: grid;
+  grid-template-rows: minmax(auto, 1fr) auto minmax(auto, 1fr);
+  gap: 1rem;
+  padding: 2rem;
+
+  max-width: 100vw;
+  max-height: 90vh;
+
+  transition: transform 0.3s ease-in-out;
+}
+
+.control-row {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+  gap: 1rem;
+}
+
+.control-text {
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 0 1rem;
+}
+
+.control-item {
+  border: 0.5rem solid #000;
+  background-color: #fff;
+  border-radius: 2rem;
+
   width: 100%;
-  height: auto;
+  height: 100%;
+  padding: 1rem;
+
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.control-icon {
+  height: 6rem;
+  width: 6rem;
+  object-fit: contain;
 }
 
 .control-hidden {
-  transform: translateY(100vh);
+  transform: translateY(150vh);
 }
 
 .control-item-none {
@@ -204,17 +213,68 @@ body {
 /* animations start */
 
 .animation {
-  justify-content: space-between;
-  gap: 2rem;
+  transition: transform 0.3s ease-in-out;
 }
 
 .animation-hidden {
   transform: translateY(-150vh);
 }
 
+.animation-content {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+@media (orientation: portrait) {
+  .animation-content {
+    flex-direction: column;
+  }
+}
+
+@media (orientation: landscape) {
+  .animation-content {
+    flex-direction: row;
+  }
+}
+
+.animation-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+}
+
 .animation-item {
-  min-width: 9vh;
+  border-radius: 2rem;
+  border-width: 0.5rem;
+
+  cursor: pointer;
+
   background-color: var(--current-color);
+
+  min-height: 20vh;
+  min-width: 20vw;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 2.5rem;
+}
+
+.animation-controls {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.animation-controls > * {
+  flex: 1 1 0;
+}
+
+#animation-back {
+  border: 0.5rem solid #000;
 }
 
 .animation-item-pick {
